tests/ui/pattern/non-structural-match-types.stderr
error: `{closure@$DIR/non-structural-match-types.rs:9:17: 9:19}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:9:9
   |
LL |         const { || {} } => {}
   |         ^^^^^^^^^^^^^^^

error: `{async block@$DIR/non-structural-match-types.rs:12:17: 12:25}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:12:9
   |
LL |         const { async {} } => {}
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

